# LLMOps

./: .env.example  .gitignore  README.md  anna_mika_model_training_pipeline.json  pyproject.toml  requirements.txt
PIPELINE_RESULTS/pipeline_results_test1/: tarot_predictions.csv
PIPELINE_RESULTS/pipeline_results_test2/: tarot_evaluation_test2.csv  tarot_predictions_test2.csv
PIPELINE_RESULTS/pipeline_results_test3/: TEST3_COMPLETE_RESULTS.md  TEST4_RECOMMENDATION.md  tarot_evaluation_test3.csv  tarot_predictions_test3.csv
PIPELINE_RUNS/pipeline_results_test1/: RESULTS_SUMMARY.md
PRESENTATION/: PRESENTATION_OUTLINE.md  TENSORBOARD_GUIDE.md  summarize_tb.py
Project Setup/: generator_single_card.py  length.ipynb  random_generator.py  tarot_training_data_SINGLE.csv  tarot_training_data_SINGLE_CARD.csv  tarot_training_data_TEST.csv  training_generator.py
chainlit_app/: env_test.py  tarot_app.py
chainlit_app/public/: oracle_style.css
data_prep/: data_generator.py  tarot-images.csv  tarot_generator.py  tarot_reader.ipynb  tarot_training_data_TEST.csv  tarot_training_data_TEST2.csv  token_length_check.py
local_test_output/: README.md
local_test_output/checkpoint-8/: README.md  scheduler.pt
pipeline_results_test1/: tarot_evaluation.csv
pipeline_results_test2/: TEST2_CONFIG.md
pipeline_results_test3/: TEST3_COMPLETE_RESULTS.md  verify_test3_metrics.py
scripts/: pipeline_runner.py  register_model_with_custom_handler.py  run_evaluation_only.py  test_fine_tuning_local.py  validate_gcp_setup.py
src/: constants.py  handler.py
src/app/: main.py
(+11 files in other folders)
