[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "chainlit>=2.8.3",
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform>=1.121.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-storage>=2.19.0",
    "kfp>=2.14.6",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
]
